[gd_scene load_steps=30 format=3 uid="uid://di32od2qbux1l"]

[ext_resource type="Script" path="res://Enemies/enemy_5.gd" id="1_uyhmn"]
[ext_resource type="PackedScene" uid="uid://cx65mwov3fgjd" path="res://UI/OnScreenInfo/health_bar.tscn" id="2_plrvm"]
[ext_resource type="PackedScene" uid="uid://cbdpjw3txwo5h" path="res://Enemies/enemy_stats.tscn" id="3_doy0a"]
[ext_resource type="Shader" path="res://Shaders/damageFlash.gdshader" id="4_5ul8s"]
[ext_resource type="Material" uid="uid://b4d1gvp1222f1" path="res://smooth.tres" id="6_mbcsp"]
[ext_resource type="PackedScene" uid="uid://3se37hf2b3nl" path="res://damage_flash_player.tscn" id="6_ug8oj"]
[ext_resource type="Script" path="res://health_component.gd" id="7_qbdgi"]
[ext_resource type="Texture2D" uid="uid://depv8lv210piw" path="res://Assets/entities/char_3207.png" id="7_su110"]
[ext_resource type="Script" path="res://hitbox_component.gd" id="8_4t7mh"]
[ext_resource type="PackedScene" uid="uid://b58vw44glay4i" path="res://Environment/move_trail.tscn" id="9_3pl4p"]
[ext_resource type="PackedScene" uid="uid://bxms6m6e8cijf" path="res://Attacks/enemy_area_beam.tscn" id="10_cwnyq"]
[ext_resource type="Texture2D" uid="uid://cfy8mw22pj3df" path="res://Assets/Free Smoke Fx  Pixel 06.png" id="11_6byve"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2j7i3"]
atlas = ExtResource("11_6byve")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hopx"]
atlas = ExtResource("11_6byve")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj8r"]
atlas = ExtResource("11_6byve")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmbok"]
atlas = ExtResource("11_6byve")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_417yc"]
atlas = ExtResource("11_6byve")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypbpc"]
atlas = ExtResource("11_6byve")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46qcl"]
atlas = ExtResource("11_6byve")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti5em"]
atlas = ExtResource("11_6byve")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0kt6"]
atlas = ExtResource("11_6byve")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_siugg"]
atlas = ExtResource("11_6byve")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imkjl"]
atlas = ExtResource("11_6byve")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d4up"]
atlas = ExtResource("11_6byve")
region = Rect2(704, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tfi56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j7i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hopx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etj8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_417yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypbpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46qcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti5em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0kt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imkjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d4up")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wrke3"]
resource_local_to_scene = true
shader = ExtResource("4_5ul8s")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h40vo"]
size = Vector2(12, 14)

[sub_resource type="Curve" id="Curve_lkcof"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_dq42w"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "stats", "health_bar", "body") groups=["Grunt"]]
collision_mask = 2
script = ExtResource("1_uyhmn")
health_component = NodePath("HealthComponent")
stats = NodePath("EnemyStats")
health_bar = NodePath("HealthBar")
body = NodePath("Body")

[node name="HealthBar" parent="." instance=ExtResource("2_plrvm")]
offset_left = -7.0
offset_top = -10.0
offset_right = 5.0
offset_bottom = -9.0

[node name="EnemyStats" parent="." instance=ExtResource("3_doy0a")]

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_bar", "damage_flash_player", "inner_sprite")]
script = ExtResource("7_qbdgi")
health_bar = NodePath("../HealthBar")
possesor = "Enemy"
damage_flash_player = NodePath("../Body/Sprite2/DamageFlashPlayer")
inner_sprite = NodePath("../Body/Sprite2")

[node name="Body" type="Node2D" parent="."]

[node name="Death" type="AnimatedSprite2D" parent="Body"]
visible = false
sprite_frames = SubResource("SpriteFrames_tfi56")
animation = &"death"

[node name="Sprite" type="Sprite2D" parent="Body"]
texture_filter = 2
material = ExtResource("6_mbcsp")
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_su110")

[node name="Sprite2" type="Sprite2D" parent="Body"]
visible = false
material = SubResource("ShaderMaterial_wrke3")
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_su110")

[node name="DamageFlashPlayer" parent="Body/Sprite2" instance=ExtResource("6_ug8oj")]

[node name="HitboxComponent" type="Area2D" parent="Body" node_paths=PackedStringArray("health_component")]
collision_mask = 2
script = ExtResource("8_4t7mh")
health_component = NodePath("../../HealthComponent")
possesor = "Enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitboxComponent"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_h40vo")

[node name="Timer" type="Timer" parent="Body/HitboxComponent"]

[node name="LeftWing" type="Node2D" parent="Body"]
position = Vector2(-5, -1)

[node name="MoveTrail" parent="Body/LeftWing" instance=ExtResource("9_3pl4p")]
z_index = -1
width_curve = SubResource("Curve_lkcof")
default_color = Color(0.752941, 0.262745, 0.207843, 1)
length = 10

[node name="RightWing" type="Node2D" parent="Body"]
position = Vector2(-5, 1)

[node name="MoveTrail" parent="Body/RightWing" instance=ExtResource("9_3pl4p")]
z_index = -1
width_curve = SubResource("Curve_dq42w")
default_color = Color(0.752941, 0.262745, 0.207843, 1)
length = 10

[node name="EnemyAreaBeam" parent="Body" instance=ExtResource("10_cwnyq")]
position = Vector2(4, 0)

[node name="Timer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
